Mobile Zone Grid Overflow Fix (#3645)
+ Ensure that primary metric (tr) cell overflows and clips the right (trailing) edge of the rendered value and displays an ellipsis to make it clear that its been clipped.
+ Apply ellipsis based overflow handling to right (primary metric) side only - avoids issue with left-side fields all individually compressing and truncating, but unevenly so, due to different output of text vs. element renderers.
+ Remove left padding for right column cells to maximize space for primary metric / minimize clipping.
+ Remove exported `multiFieldRenderer` - a breaking change and noted as such, but do not expect widespread use. Made internal and renamed to `zoneGridRenderer`.
+ Standardize CSS vars, rename with `--xh-zone-grid` prefix.  Break out zone grid styles into their own file.
+ Expose a few additional zone-grid specific CSS vars, change some defaults to be a bit less opinionated (allowing apps to then make their choices).
+ Add some intro/help text to zone mapper.
+ Minor style / layout refinements to (standard) mobile ColChooser

---------

--- a/mobile/cmp/grid/impl/ColChooser.scss
+++ b/mobile/cmp/grid/impl/ColChooser.scss
@@ -1,22 +1,9 @@
 .xh-col-chooser {
-  border: var(--xh-border-solid);
-
-  & > .xh-vframe {
-    height: 100%;
-    background-color: var(--xh-bg-alt);
-
-    .xh-dark & {
-      background-color: var(--xh-bg);
-    }
-  }
-
   &__internal {
     height: 100%;
   }
 
   &__section {
-    background: var(--xh-bg);
-
     &:first-child {
       height: 65% !important;
     }
@@ -31,13 +18,9 @@
     }
 
     .xh-panel-header {
-      padding: var(--xh-pad-half-px) var(--xh-pad-px);
       background-color: var(--xh-appbar-bg);
       color: var(--xh-appbar-title-color);
-
-      &__title {
-        font-size: var(--xh-font-size-small-px);
-      }
+      padding-left: var(--xh-pad-px);
     }
   }
 
